# sdgbc

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/modules/: FindSFML.cmake
docs/: dissertation.docx  viva_presentation.pptx
include/: emulator.h  types.h  util.h
include/audio/: sfml_apu_out.h
include/debug/: cpu_cmd_mode.h  serial_stdout.h
include/hw/: dma.h  gbc.h  joypad.h  memory.h  mmu.h  ppu.h  serial.h  timer.h
include/hw/apu/: apu.h  apu_chan_base.h  apu_chan_noise.h  apu_chan_square.h  apu_chan_wave.h
include/hw/cart/: cart.h  cart_ext_base.h  cart_ext_mbc1.h  cart_ext_mbc2.h  cart_ext_mbc3.h  cart_ext_mbc5.h  cart_ext_meta.h
include/hw/cpu/: cpu.h  cpu_ops_inl.h  cpu_reg.h  cpu_reg_base.h  cpu_reg_base_inl.h
include/wxui/: about_dialog.h  app.h  joypad_dialog.h  lcd_canvas.h  main_frame.h  sfml_canvas.h  wx.h
include/wxui/winrc/: sdgbc.rc
include/wxui/xpm/: sdgbc16.xpm  sdgbc24.xpm  sdgbc256.xpm  sdgbc32.xpm  sdgbc48.xpm  sdgbc64.xpm  sdgbc96.xpm  xpm.h
prototype_roms/: 01-ld-hello-world.gb  01-ld-hello-world.s  02-fib.gb  02-fib.s  03-call.gb  03-call.s  04-int.gb  04-int.s  05-bk-switch.gbc  05-bk-switch.s
src/: emulator.cpp  util.cpp
src/audio/: sfml_apu_out.cpp
src/debug/: cpu_cmd_mode.cpp  serial_stdout.cpp
src/hw/: dma.cpp  gbc.cpp  joypad.cpp  mmu.cpp  ppu.cpp  serial.cpp  timer.cpp
src/hw/apu/: apu.cpp  apu_chan_base.cpp  apu_chan_noise.cpp  apu_chan_square.cpp  apu_chan_wave.cpp
src/hw/cart/: cart.cpp  cart_ext_base.cpp  cart_ext_mbc1.cpp  cart_ext_mbc2.cpp  cart_ext_mbc3.cpp  cart_ext_mbc5.cpp
src/hw/cpu/: cpu.cpp  cpu_ops.cpp  cpu_ops_decode.cpp  cpu_reg.cpp
src/wxui/: about_dialog.cpp  app.cpp  joypad_dialog.cpp  lcd_canvas.cpp  main_frame.cpp  sfml_canvas.cpp
